Colab을 통해 생성됨

--- a/Metal_Finder.ipynb
+++ b/Metal_Finder.ipynb
@@ -11,27 +11,10 @@
       ],
       "metadata": {
         "cellView": "form",
-        "id": "YPFCSbYcJOsI",
-        "outputId": "cca4a086-9e03-4b02-dc6b-a87b29c60a38",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "YPFCSbYcJOsI"
       },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "⏬ Downloading https://github.com/jaimergp/miniforge/releases/download/24.11.2-1_colab/Miniforge3-colab-24.11.2-1_colab-Linux-x86_64.sh...\n",
-            "📦 Installing...\n",
-            "📌 Adjusting configuration...\n",
-            "🩹 Patching environment...\n",
-            "⏲ Done in 0:00:07\n",
-            "🔁 Restarting kernel...\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -112,7 +95,7 @@
         "#@markdown ### Enter the path to the input directory:\n",
         "Input_pdb_directory = \"/content/\"  #@param {type:\"string\"}\n",
         "#@markdown ### Enter the path to the output directory:\n",
-        "Target_pdb_directory = \"/content/cleaned/\"  #@param {type:\"string\"}\n",
+        "Target_pdb_directory = \"/content/\"  #@param {type:\"string\"}\n",
         "\n",
         "# Create the output directory if it doesn't exist\n",
         "os.makedirs(Target_pdb_directory, exist_ok=True)\n",
@@ -146,101 +129,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "lPrIazJuxjnp",
-        "cellView": "form",
-        "outputId": "5927012e-373b-490e-d269-4f0a38f6ae18",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "cellView": "form"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "⬇️ Downloading thresholds from: https://raw.githubusercontent.com/SNU-Songlab/Metal-Installer-code/main/Threshold/Cu/2His_1Cys_only_for_Cu/4.xlsx\n",
-            "✅ Thresholds downloaded successfully to /content/result/thresholds.xlsx\n",
-            "⚙️ Loading thresholds...\n",
-            "📊 Thresholds loaded:\n",
-            "  - alpha_distance_range: Min=5.1, Max=9.5\n",
-            "  - beta_distance_range: Min=3.8, Max=7.5\n",
-            "  - ratio_threshold_range: Min=0.9, Max=1.5\n",
-            "  - pie_threshold_range: Min=0.0, Max=20.0\n",
-            "\n",
-            "--- Starting Batch Processing with KDTree Pre-filtering ---\n",
-            "Found 32 PDB files in /content/cleaned\n",
-            "🚀 Starting parallel processing with 6 workers...\n",
-            "🔄 Processing: fold_pwj031_model_0.pdb🔄 Processing: fold_pwj015_real_model_0.pdb🔄 Processing: fold_pwj030_model_0.pdb🔄 Processing: fold_pwj004_model_0.pdb🔄 Processing: fold_pwj002_model_0.pdb\n",
-            "\n",
-            "\n",
-            "\n",
-            "\n",
-            "🔄 Processing: fold_pwj010_model_0.pdb\n",
-            "✅ Finished: fold_pwj004_model_0.pdb (Saved: 1 triads)\n",
-            "🔄 Processing: fold_pwj013_model_0.pdb\n",
-            "✅ Finished: fold_pwj002_model_0.pdb (Saved: 0 triads)\n",
-            "🔄 Processing: fold_pwj017_model_0.pdb\n",
-            "✅ Finished: fold_pwj015_real_model_0.pdb (Saved: 1 triads)\n",
-            "🔄 Processing: fold_pwj023_model_0.pdb✅ Finished: fold_pwj013_model_0.pdb (Saved: 0 triads)\n",
-            "\n",
-            "🔄 Processing: fold_pwj024_model_0.pdb\n",
-            "✅ Finished: fold_pwj010_model_0.pdb (Saved: 0 triads)\n",
-            "🔄 Processing: fold_pwj020_model_0.pdb\n",
-            "✅ Finished: fold_pwj030_model_0.pdb (Saved: 1 triads)\n",
-            "✅ Finished: fold_pwj031_model_0.pdb (Saved: 1 triads)\n",
-            "🔄 Processing: fold_pwj006_model_0.pdb\n",
-            "🔄 Processing: fold_pwj003_model_0.pdb\n",
-            "✅ Finished: fold_pwj023_model_0.pdb (Saved: 1 triads)\n",
-            "🔄 Processing: fold_pwj011_model_0.pdb\n",
-            "✅ Finished: fold_pwj017_model_0.pdb (Saved: 1 triads)✅ Finished: fold_pwj020_model_0.pdb (Saved: 1 triads)\n",
-            "\n",
-            "🔄 Processing: fold_pwj005_model_0.pdb🔄 Processing: fold_pwj014_model_0.pdb\n",
-            "\n",
-            "✅ Finished: fold_pwj011_model_0.pdb (Saved: 0 triads)\n",
-            "🔄 Processing: fold_pwj026_model_0.pdb\n",
-            "✅ Finished: fold_pwj006_model_0.pdb (Saved: 1 triads)\n",
-            "🔄 Processing: fold_pwj021_model_0.pdb\n",
-            "✅ Finished: fold_pwj024_model_0.pdb (Saved: 1 triads)\n",
-            "🔄 Processing: fold_pwj027_model_0.pdb\n",
-            "✅ Finished: fold_pwj014_model_0.pdb (Saved: 0 triads)\n",
-            "🔄 Processing: fold_pwj022_model_0.pdb\n",
-            "✅ Finished: fold_pwj005_model_0.pdb (Saved: 1 triads)\n",
-            "🔄 Processing: fold_pwj016_model_0.pdb\n",
-            "✅ Finished: fold_pwj026_model_0.pdb (Saved: 1 triads)\n",
-            "🔄 Processing: fold_pwj028_model_0.pdb\n",
-            "✅ Finished: fold_pwj003_model_0.pdb (Saved: 1 triads)\n",
-            "🔄 Processing: fold_pwj007_model_0.pdb\n",
-            "✅ Finished: fold_pwj016_model_0.pdb (Saved: 2 triads)\n",
-            "🔄 Processing: fold_pwj018_model_0.pdb\n",
-            "✅ Finished: fold_pwj028_model_0.pdb (Saved: 1 triads)\n",
-            "🔄 Processing: fold_pwj029_model_0.pdb\n",
-            "✅ Finished: fold_pwj027_model_0.pdb (Saved: 1 triads)\n",
-            "🔄 Processing: fold_pwj008_model_0.pdb\n",
-            "✅ Finished: fold_pwj021_model_0.pdb (Saved: 1 triads)\n",
-            "🔄 Processing: fold_pwj025_model_0.pdb\n",
-            "✅ Finished: fold_pwj022_model_0.pdb (Saved: 2 triads)\n",
-            "🔄 Processing: fold_pwj019_real_model_0.pdb\n",
-            "✅ Finished: fold_pwj018_model_0.pdb (Saved: 2 triads)\n",
-            "🔄 Processing: fold_pwj012_model_0.pdb\n",
-            "✅ Finished: fold_pwj008_model_0.pdb (Saved: 0 triads)\n",
-            "🔄 Processing: fold_pwj032_model_0.pdb\n",
-            "✅ Finished: fold_pwj029_model_0.pdb (Saved: 1 triads)\n",
-            "🔄 Processing: fold_pwj009_model_0.pdb\n",
-            "✅ Finished: fold_pwj007_model_0.pdb (Saved: 0 triads)\n",
-            "🔄 Processing: fold_pwj033_model_0.pdb\n",
-            "✅ Finished: fold_pwj009_model_0.pdb (Saved: 0 triads)\n",
-            "✅ Finished: fold_pwj012_model_0.pdb (Saved: 1 triads)\n",
-            "✅ Finished: fold_pwj032_model_0.pdb (Saved: 1 triads)\n",
-            "✅ Finished: fold_pwj025_model_0.pdb (Saved: 1 triads)\n",
-            "✅ Finished: fold_pwj019_real_model_0.pdb (Saved: 1 triads)\n",
-            "✅ Finished: fold_pwj033_model_0.pdb (Saved: 1 triads)\n",
-            "\n",
-            "🎉 All processing finished.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# @markdown # Step 3A: Filter using geometric parameters (Containing all metal ligating residue)\n",
         "\n",
@@ -259,9 +153,9 @@
         "\n",
         "# --- Constants ---\n",
         "# Input directory containing PDB files to be processed\n",
-        "Target_pdb_directory = \"/content/cleaned\" # @param {type:\"string\"}\n",
+        "Target_pdb_directory = \"/content/\" # @param {type:\"string\"}\n",
         "# Output directory where processed Excel files will be saved\n",
-        "Result1_excel_directory = \"/content/result/\" # @param {type:\"string\"}\n",
+        "Result1_excel_directory = \"/content/\" # @param {type:\"string\"}\n",
         "# Create the output directory if it doesn't exist\n",
         "os.makedirs(Result1_excel_directory, exist_ok=True)\n",
         "\n",
@@ -269,7 +163,7 @@
         "base_url = \"https://raw.githubusercontent.com/SNU-Songlab/Metal-Installer-code/main/Threshold\"\n",
         "Metal = 'Cu'  # @param [\"Zn\", \"Mn\", \"Cu\", \"Fe\"]\n",
         "Ligand = '2His_1Cys_only_for_Cu'  # @param [\"3His_only_for_Zn_Cu\", \"2His_1Asp_only_for_Zn_Mn_Fe\", \"2His_1Glu_only_for_Zn_Mn_Fe\", \"2His_1Cys_only_for_Cu\"]\n",
-        "Threshold = '4'  # @param [\"1\", \"2\", \"3\", \"4\",\"5\"]\n",
+        "Threshold = '1'  # @param [\"1\", \"2\", \"3\", \"4\",\"5\"]\n",
         "thresholds_url = f\"{base_url}/{Metal}/{Ligand}/{Threshold}.xlsx\"\n",
         "thresholds_file = os.path.join(Result1_excel_directory, \"thresholds.xlsx\")\n",
         "\n",
@@ -327,7 +221,7 @@
         "        structure = parser.get_structure(\"protein\", pdb_file)\n",
         "        model = structure[0]\n",
         "\n",
-        "        if Metal == \"Cu\" and Ligand == \"2His_1Cys_only_for_copper\":\n",
+        "        if Metal == \"Cu\" and Ligand == \"2His_1Cys_only_for_Cu\":\n",
         "            target_residues = {\"HIS\", \"CYS\", \"ASP\", \"GLU\"}\n",
         "        else:\n",
         "            target_residues = {\"HIS\", \"ASP\", \"GLU\"}\n",
